# Ariadne

./: .gitignore  CMakeLists.txt  README  README.md  ariadne.c  ariadne.h  ariadne.sh  drmemory  drthread.c  drthread.h  drthread.sh  pthread_event.h  report.h
drmemory/: dynamorio
drmemory/bin64/: symquery
drmemory/drmemory/docs/html/: annotated.html  classes.html  deprecated.html  dir_06303cfa5fca30513301a706836d4aac.html  dir_0b8daa2442015de6f818137c5affc8e6.html  dir_0e40d939e2f43c8f4dc1d31728755355.html  dir_2406f818cd4dbae98acabf193e40ce81.html  dir_3d01aabd34f941f983252ec012f1673d.html  dir_5dfe3f14f6f1104fb46b3a84e8a57b89.html  dir_654c4511392743582d00a05fea98e096.html  dir_67ad150f79555a1c7c9ee62a341bf663.html  dir_74ffa483c6a7c943fbfe18958a1949a0.html  dir_7b4825c76e8769772b2d56af1d239ec2.html  dir_cbc290ef622e86de217807d4fc6cc1af.html  dir_f1d69617891c8f8046bee90b8eaa642f.html  drmemory__framework_8h.html  drsymcache_8h.html  drsymcache_8h.js  drsyscall_8h.html  drsyscall_8h.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  (+51 more)
drmemory/drmf/: DRMFTarget32-debug.cmake  DRMFTarget32-relwithdebinfo.cmake  DRMFTarget32.cmake  DRMFTarget64-debug.cmake  DRMFTarget64-relwithdebinfo.cmake  DRMFTarget64.cmake  DrMemoryFrameworkConfigVersion.cmake
drmemory/drmf/include/: drmemory_framework.h
drmemory/dynamorio/bin32/: drconfig  drinject  drrun  nudgeunix
drmemory/dynamorio/bin64/: drconfig  drinject  drrun  nudgeunix
dynamorio/bin32/: drconfig  drconfig.debug  drinject  drinject.debug  drloader  drloader.debug  drrun  drrun.debug  nudgeunix  nudgeunix.debug
dynamorio/bin64/: drconfig  drconfig.debug  drinject  drinject.debug  drloader  drloader.debug  drrun  drrun.debug  nudgeunix  nudgeunix.debug
dynamorio/cmake/: DynamoRIOConfig.cmake  DynamoRIOConfigVersion.cmake  DynamoRIOTarget32-debug.cmake  DynamoRIOTarget32-release.cmake  DynamoRIOTarget32.cmake  DynamoRIOTarget64-debug.cmake  DynamoRIOTarget64-release.cmake  DynamoRIOTarget64.cmake  cpp2asm_defines.h
dynamorio/docs/html/: API_BT.html  API_samples.html  API_tutorial.html  API_tutorial_bbdynsize1.html  API_tutorial_bbdynsize2.html  API_tutorial_bbdynsize3.html  API_tutorial_bbdynsize4.html  API_tutorial_bbdynsize5.html  API_tutorial_bbdynsize6.html  API_tutorial_bbdynsize7.html  API_tutorial_bbdynsize8.html  API_tutorial_bbdynsize9.html  API_tutorial_prefetch1.html  API_tutorial_steal_reg1.html  annotated.html  annotated.js  classdrgui__options__interface__t.html  classdrgui__tool__interface__t.html  classes.html  deprecated.html  dir_05103c2b607d6dcf14b1f28c3e2bc9a3.html  dir_0e9fc4bee511e72b94ca2dd0d7e4dd2a.html  dir_197003d3e3fbe2fdf9ca4433ecfdc609.html  dir_2922ec23518eb0a01f47d37fe01009f4.html  dir_298a149554736bdcb402c92052c7fb26.html  dir_5222d669d8dadf2dd5ab6eb92a5353f9.html  dir_55c8b0de201c7b5f040b44c7ba626e67.html  dir_5f32646ce0fe9c12e6f18ff8333c3ba1.html  dir_6150d53040e66d0843103682b70a3f8f.html  dir_77cc5841f5cb113f0681ea26ad8f43e2.html  dir_ae1516c69396d39b26057a79f5962735.html  dir_d0049a31fcad263e031558c76c278b24.html  dir_e38f161aeb0c10d7467f6b57102f3b97.html  dir_f6f7a5f1599d84d7b9ab4184a149270c.html  dr__api_8h.html  dr__app_8h.html  dr__app_8h.js  dr__config_8h.html  dr__defines_8h.html  dr__events_8h.html  (+160 more)
dynamorio/ext/bin32/: drgui
dynamorio/ext/bin64/: drgui
dynamorio/include/: dr_api.h  dr_ir_instr.h  dr_ir_macros.h  dr_ir_opcodes.h  dr_ir_opnd.h  dr_ir_utils.h  dr_proc.h  dr_tools.h
dynamorio/lib32/: libdrconfiglib.so.debug  libdrinjectlib.so.debug
dynamorio/lib32/debug/: libdrpreload.so.debug  libdynamorio.so.4.2
dynamorio/lib32/release/: libdrpreload.so.debug  libdynamorio.so.4.2
dynamorio/lib64/: libdrconfiglib.so.debug  libdrinjectlib.so.debug
dynamorio/lib64/debug/: libdrpreload.so.debug  libdynamorio.so.4.2
dynamorio/lib64/release/: libdrpreload.so.debug  libdynamorio.so.4.2
dynamorio/samples/: CMakeLists.txt
dynamorio/samples/bin32/: libbbbuf.so.debug  libbbcount.so.debug  libbbsize.so.debug  libcbr.so.debug  libcountcalls.so.debug  libdiv.so.debug  libempty.so.debug  libinc2add.so.debug  libinline.so.debug  libinscount.so.debug  libinstrcalls.so.debug  libmemtrace.so.debug  libmodxfer.so.debug  libmodxfer_app2lib.so.debug  libprefetch.so.debug  libsignal.so.debug  libstl_test.so.debug  libstrace.so.debug  libwrap.so.debug  tracedump  tracedump.debug
dynamorio/samples/bin64/: libbbbuf.so.debug  libbbcount.so.debug  libbbsize.so.debug  libcbr.so.debug  libcountcalls.so.debug  libdiv.so.debug  libempty.so.debug  libinc2add.so.debug  libinline.so.debug  libinscount.so.debug  libinstrcalls.so.debug  libmemtrace.so.debug  libmodxfer.so.debug  libmodxfer_app2lib.so.debug  libprefetch.so.debug  libsignal.so.debug  libstl_test.so.debug  libstrace.so.debug  libwrap.so.debug  tracedump  tracedump.debug
dynamorio/tools/bin32/: bbcov2lcov
dynamorio/tools/bin64/: bbcov2lcov
tests/: CMakeLists.txt  hello.c  hello.expect  join.c  malloc.c  malloc.expect  race1.c  runtest.cmake
(+81 files in other folders)
